--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,12 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_dnd: ^0.1.4+1 # resolved working version
-
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^5.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
 
